@@ -5907,7 +5907,7 @@ GtkWidget *create_window(gint windowid)
             gtk_widget_unmap(window);
 
         gdk_window_reparent(window->window, window_container, 0, 0);
-
+		gmtk_media_tracker_set_allow_expand(tracker, FALSE);
     } else {
         if (remember_loc) {
             gtk_window_move(GTK_WINDOW(window), loc_window_x, loc_window_y);
